# smallcheck

./: .gitignore  .travis.yml  .travis.yml.patch  CHANGELOG.md  CHANGES.md  CREDITS.md  README  README.md  cabal.project  smallcheck.cabal  smallcheck.yaml  stack.yaml
.github/workflows/: ci.yml  haskell-ci.yml
Test/: SmallCheck.hs
Test/SmallCheck/: Drivers.hs  Exhaustive.hs  Monad.hs  Property.hs  Series.hs  SeriesMonad.hs
Test/SmallCheck/Property/: Result.hs
Test/SmallCheck/Series/: Types.hs
examples/: generic.hs  run-examples.sh  series.hs
examples/binarytries/: BinaryTries.hs  README
examples/circuits/: BitAdd.hs  Mux.hs  README  Sad.hs
examples/imperative/: Behaviour.hs  Compiler.hs  Interpreter.hs  Machine.hs  Properties.hs  README  StackMap.hs  Syntax.hs  Value.hs
examples/listy/: ListProps.hs  README
examples/logical/: LogicProps.hs  README
examples/numeric/: NumProps.hs  README
examples/regular/: README  Regular.hs
src/Test/SmallCheck/: Drivers.hs  Property.hs  Series.hs
src/Test/SmallCheck/Series/: Types.hs
test/: run.sh  smallcheck-test.cabal  test.hs
test-framework-smallcheck/: README.md  test-framework-smallcheck.cabal
test-framework-smallcheck/Test/Framework/Providers/: SmallCheck.hs
test-suite/: run.sh  smallcheck-test.cabal  test.hs
