name:               smallcheck
version:            1.1.7
license:            BSD3
license-file:       LICENSE
maintainer:         Andrew Lelechenko <andrew.lelechenko@gmail.com>
author:             Colin Runciman, Roman Cheplyaka
cabal-version:      >=1.10
tested-with:
  ghc ==8.10.1 ghc ==8.8.3 ghc ==8.6.5 ghc ==8.4.4 ghc ==8.2.2
  ghc ==8.0.2 ghc ==7.10.3 ghc ==7.8.4 ghc ==7.6.3 ghc ==7.4.2

homepage:           https://github.com/Bodigrim/smallcheck
bug-reports:        https://github.com/Bodigrim/smallcheck/issues
synopsis:           A property-based testing library
description:
  SmallCheck is a testing library that allows to verify properties
  for all test cases up to some depth. The test cases are generated
  automatically by SmallCheck.

category:           Testing
build-type:         Simple
extra-source-files:
  README.md
  CREDITS.md
  CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/Bodigrim/smallcheck.git

library
  default-language: Haskell2010

  exposed-modules:
    Test.SmallCheck
    Test.SmallCheck.Drivers
    Test.SmallCheck.Series

  other-modules:
    Test.SmallCheck.Property
    Test.SmallCheck.SeriesMonad
    Test.SmallCheck.Property.Result

  build-depends:
    base >=4.5 && <5,
    mtl,
    logict,
    pretty

  if impl(ghc <8.0)
    build-depends:
      semigroups,
      transformers

  if impl(ghc <7.10)
    build-depends:
      nats,
      void

  if impl(ghc <7.6)
    build-depends: ghc-prim >=0.2
