name:               smallcheck
version:            1.2.1.1
license:            BSD3
license-file:       LICENSE
maintainer:         Andrew Lelechenko <andrew.lelechenko@gmail.com>
author:             Colin Runciman, Roman Cheplyaka
cabal-version:      >=1.10
tested-with:
  ghc ==9.12.2 ghc ==9.10.2 ghc ==9.8.4 ghc ==9.6.7 ghc ==9.4.8
  ghc ==9.2.8 ghc ==9.0.2 ghc ==8.10.7 ghc ==8.8.4 ghc ==8.6.5 ghc ==8.4.4 ghc ==8.2.2

homepage:           https://github.com/Bodigrim/smallcheck
bug-reports:        https://github.com/Bodigrim/smallcheck/issues
synopsis:           A property-based testing library
description:
  As of 2023, this library is largely obsolete: arbitrary test generators
  with shrinking such as [falsify](https://hackage.haskell.org/package/falsify)
  offer much better user experience.
  .
  SmallCheck is a testing library that allows to verify properties
  for all test cases up to some depth. The test cases are generated
  automatically by SmallCheck.

category:           Testing
build-type:         Simple
extra-source-files:
  README.md
  CREDITS.md
  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/Bodigrim/smallcheck

library
  default-language: Haskell2010

  exposed-modules:
    Test.SmallCheck
    Test.SmallCheck.Drivers
    Test.SmallCheck.Series

  other-modules:
    Test.SmallCheck.Property
    Test.SmallCheck.SeriesMonad
    Test.SmallCheck.Property.Result

  build-depends:
    base >=4.10 && <5,
    mtl <2.4,
    logict >=0.5 && <0.9,
    pretty <1.2

  ghc-options: -Wcompat
