Name:                test-framework-smallcheck
Version:             0.2
Cabal-Version:       >= 1.6
Category:            Testing
Synopsis:            SmallCheck support for the test-framework package.
License:             BSD3
License-File:        LICENSE
Author:              Roman Cheplyaka <roma@ro-che.info>
Maintainer:          Roman Cheplyaka <roma@ro-che.info>
Homepage:            https://github.com/feuerbach/smallcheck
Bug-reports:         https://github.com/feuerbach/smallcheck/issues
Build-Type:          Simple

Synopsis: Support for SmallCheck tests in test-framework
Description: Support for SmallCheck tests in test-framework

Source-repository head
  type:     git
  location: git://github.com/feuerbach/smallcheck.git
  subdir:   test-framework-smallcheck

Source-repository this
  type:     git
  location: git://github.com/feuerbach/smallcheck.git
  tag:      testframework-v0.2
  subdir:   test-framework-smallcheck

Library
        Exposed-Modules:        Test.Framework.Providers.SmallCheck

        Build-Depends:          test-framework >= 0.4.2.0 && < 1.0,
                                smallcheck >= 1.0,
                                base >= 4 && < 5,
                                transformers
