name:          smallcheck-test
version:       0.1
license:       MIT
license-file:  LICENSE
maintainer:    Roman Cheplyaka <roma@ro-che.info>
author:        Roman Cheplyaka
build-type:    Simple
cabal-version: >=1.10
category:      Testing
synopsis:      Tests for smallcheck
description:   Tests for smallcheck needs to be a separate library
               because of a circular dependency.

tested-with:
  ghc ==8.10.1 ghc ==8.8.3 ghc ==8.6.5 ghc ==8.4.4 ghc ==8.2.2
  ghc ==8.0.2 ghc ==7.10.3 ghc ==7.8.4 ghc ==7.6.3 ghc ==7.4.2

test-suite smallcheck-test
  type:             exitcode-stdio-1.0
  main-is:          test.hs
  default-language: Haskell2010
  build-depends:
    base <5,
    containers,
    tagged,
    smallcheck >=1,
    mtl,
    logict,
    nats,
    tasty >=0.4,
    tasty-hunit >=0.4.1,
    tasty-smallcheck
